SWIFT-1358 Update Swift versions tested on Evergreen (#685)

--- a/.evergreen/config.yml
+++ b/.evergreen/config.yml
@@ -1106,10 +1106,14 @@ axes:
         display_name: "Swift 5.4"
         variables:
           SWIFT_VERSION: "5.4.2"
-      - id: "5.5-dev"
-        display_name: "Swift 5.5-dev"
+      - id: "5.5"
+        display_name: "Swift 5.5"
         variables:
-          SWIFT_VERSION: "DEVELOPMENT-SNAPSHOT-2021-04-26-a"
+          SWIFT_VERSION: "5.5"
+      - id: "6.0-dev"
+        display_name: "Swift 6.0-dev"
+        variables:
+          SWIFT_VERSION: "main-snapshot"
 
   - id: ssl-auth
     display_name: SSL and Auth
@@ -1233,9 +1237,9 @@ buildvariants:
   matrix_spec:
     os-fully-featured: "*"
     swift-version:
-      - "5.3"
       - "5.4"
-      - "5.5-dev"
+      - "5.5"
+      - "6.0-dev"
     ssl-auth: "*"
   display_name: "${swift-version} ${os-fully-featured} ${ssl-auth}"
   tasks:
@@ -1274,9 +1278,8 @@ buildvariants:
   matrix_spec:
     os-fully-featured: "*"
     swift-version:
-      - "5.3"
       - "5.4"
-      - "5.5-dev"
+      - "5.5"
   display_name: "Atlas Connectivity ${swift-version} ${os-fully-featured}"
   tasks:
     - ".atlas-connect"
@@ -1288,9 +1291,8 @@ buildvariants:
       - "ubuntu-20.04"
     ssl-auth: "*"
     swift-version:
-      - "5.3"
       - "5.4"
-      - "5.5-dev"
+      - "5.5"
   display_name: "Load Balancer ${swift-version} ${os-fully-featured} ${ssl-auth}"
   tasks:
     - ".load-balancer"
@@ -1314,7 +1316,7 @@ buildvariants:
       - latest
       - 5.0
       - 4.4
-    swift-version: "5.4"
+    swift-version: "5.5"
   display_name: "OCSP ${swift-version} ${os-fully-featured} ${versions}"
   batchtime: 20160 # 14 days
   tasks:
@@ -1332,7 +1334,7 @@ buildvariants:
 - matrix_name: "ocsp-macos"
   matrix_spec:
     os-fully-featured: "macos-10.15"
-    swift-version: "5.4"
+    swift-version: "5.5"
     versions:
       - latest
       - 5.0
@@ -1346,7 +1348,7 @@ buildvariants:
 - matrix_name: "versioned-api-tests"
   matrix_spec:
     os-fully-featured: ubuntu-18.04
-    swift-version: "5.4"
+    swift-version: "5.5"
     versionedAPI: "*"
   display_name: "Versioned API ${versionedAPI} ${swift-version} ${os-fully-featured}"
   batchtime: 10080  # 7 days
@@ -1358,7 +1360,7 @@ buildvariants:
   display_name: "Format and Lint"
   matrix_spec:
     os-fully-featured: "ubuntu-18.04"
-    swift-version: "5.4"
+    swift-version: "5.4" # upgrading is blocked on a SwiftLint release > 0.44
   tasks:
     - name: "check-format"
     - name: "check-lint"
@@ -1367,7 +1369,7 @@ buildvariants:
   display_name: "Check Sourcery"
   matrix_spec:
     os-fully-featured: "macos-10.15"
-    swift-version: "5.4"
+    swift-version: "5.5"
   tasks:
     - name: "check-sourcery"
 
@@ -1375,7 +1377,7 @@ buildvariants:
   display_name: "${sanitize} ${os-fully-featured} ${ssl-auth}"
   matrix_spec:
     os-fully-featured: "ubuntu-18.04"
-    swift-version: "5.4"
+    swift-version: "5.5"
     ssl-auth: "*"
     sanitize: "tsan"
   tasks:
@@ -1385,7 +1387,7 @@ buildvariants:
   display_name: "Leak Checker ${os-fully-featured} ${ssl-auth}"
   matrix_spec:
     os-fully-featured: "macos-10.15"
-    swift-version: "5.4"
+    swift-version: "5.5"
     ssl-auth: "*"
     check-leaks: "leaks"
   tasks:
