--- a/.evergreen/config.yml
+++ b/.evergreen/config.yml
@@ -177,7 +177,7 @@ functions:
         working_dir: "src"
         script: |
           ${PREPARE_SHELL}
-          # set +o xtrace
+          set +o xtrace
           SWIFT_VERSION=${SWIFT_VERSION} ATLAS_REPL='${ATLAS_REPL}' ATLAS_SHRD='${ATLAS_SHRD}' ATLAS_FREE='${ATLAS_FREE}' ATLAS_TLS11='${ATLAS_TLS11}' ATLAS_TLS12='${ATLAS_TLS12}' \
           ATLAS_REPL_SRV='${ATLAS_REPL_SRV}' ATLAS_SHRD_SRV='${ATLAS_SHRD_SRV}' ATLAS_FREE_SRV='${ATLAS_FREE_SRV}' ATLAS_TLS11_SRV='${ATLAS_TLS11_SRV}' ATLAS_TLS12_SRV='${ATLAS_TLS12_SRV}' \
           ATLAS_SERVERLESS='${ATLAS_SERVERLESS}' ATLAS_SERVERLESS_SRV='${ATLAS_SERVERLESS_SRV}' \
