--- a/.evergreen/config.yml
+++ b/.evergreen/config.yml
@@ -110,6 +110,7 @@ functions:
             SSL=${SSL} \
             AUTH=${AUTH} \
             REQUIRE_API_VERSION=${REQUIRE_API_VERSION} \
+            LOAD_BALANCER=${LOAD_BALANCER} \
             sh ${DRIVERS_TOOLS}/.evergreen/run-orchestration.sh
     # run-orchestration generates expansion file with the MONGODB_URI for the cluster
     - command: expansions.update
@@ -664,6 +665,7 @@ tasks:
           vars:
             MONGODB_VERSION: "latest"
             TOPOLOGY: "sharded_cluster"
+            LOAD_BALANCER: "true"
         - func: start-load-balancer
         - func: "run-lb-tests"
           vars:
