update serverless testing

--- a/.evergreen/config.yml
+++ b/.evergreen/config.yml
@@ -193,12 +193,11 @@ functions:
           ${PREPARE_SHELL}
           set +o xtrace
 
-          MONGODB_URI="${SINGLE_ATLASPROXY_SERVERLESS_URI}" \
+          MONGODB_URI="${SERVERLESS_URI}" \
           MONGODB_API_VERSION=${MONGODB_API_VERSION} \
           SERVERLESS_ATLAS_USER="${SERVERLESS_ATLAS_USER}" \
           SERVERLESS_ATLAS_PASSWORD="${SERVERLESS_ATLAS_PASSWORD}" \
-          SINGLE_MONGOS_LB_URI="${SINGLE_ATLASPROXY_SERVERLESS_URI}" \
-          MULTI_MONGOS_LB_URI="${MULTI_ATLASPROXY_SERVERLESS_URI}" \
+          SINGLE_MONGOS_LB_URI="${SERVERLESS_URI}" \
           SWIFT_VERSION="${SWIFT_VERSION}" \
             ${PROJECT_DIRECTORY}/.evergreen/run-serverless-tests.sh
 
