--- a/Tests/Specs/crud/tests/unified/updateMany-comment.yml
+++ b/Tests/Specs/crud/tests/unified/updateMany-comment.yml
@@ -29,8 +29,7 @@ tests:
         object: *collection0
         arguments:
           filter: &filter { _id: 1 }
-          update: &update
-            - $set: { x: 22 }
+          update: &update { $set: {x: 22} }
           comment: "comment"
     expectEvents:
       - client: *client0
@@ -42,6 +41,8 @@ tests:
                   -
                     q: *filter
                     u: *update
+                    multi: true
+                    upsert: { $$unsetOrMatches: false }
                 comment: "comment"
     outcome: &outcome
       - collectionName: *collection0Name
@@ -69,12 +70,15 @@ tests:
                   -
                     q: *filter
                     u: *update
+                    multi: true
+                    upsert: { $$unsetOrMatches: false }
                 comment: *comment
     outcome: *outcome
 
   - description: "UpdateMany with comment - pre 4.4"
     runOnRequirements:
-      - maxServerVersion: "4.2.99"
+      - minServerVersion: "3.4.0"
+        maxServerVersion: "4.2.99"
     operations:
       - name: updateMany
         object: *collection0
@@ -94,5 +98,7 @@ tests:
                   -
                     q: *filter
                     u: *update
+                    multi: true
+                    upsert: { $$unsetOrMatches: false }
                 comment: "comment"
     outcome: *initialData
